Moved templates to correct location

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
             {% for item in items %}
             <tr>
                 <td>{{ item.name }}</td>
-                <td>{{ item.description }}</td>
+                <td>{{ item.shortDesc }}</td>
                 <td>{{ item.price }}</td>
                 <td>{{ item.cost }}</td>
                 <td>{{ item.stock }}</td>
