Fixed form input step

--- a/templates/edit.html
+++ b/templates/edit.html
@@ -16,10 +16,10 @@
         <input type="text" id="fullDesc" name="fullDesc" value="{{ item.fullDesc }}" ><br>
 
         <label for="price">Price:</label>
-        <input type="number" id="price" name="price" maxlength=20 value="{{ item.price }}" required><br>
+        <input type="number" id="price" name="price" step="any" maxlength=20 value="{{ item.price }}" required><br>
 
         <label for="cost">Cost:</label>
-        <input type="number" id="cost" name="cost" maxlength=20 value="{{ item.cost }}" required><br>
+        <input type="number" id="cost" name="cost" step="any" maxlength=20 value="{{ item.cost }}" required><br>
 
         <label for="stock">Stock:</label>
         <input type="number" id="stock" name="stock" maxlength=20 value="{{ item.stock }}" required><br>
