--- a/templates/edit.html
+++ b/templates/edit.html
@@ -2,6 +2,9 @@
 <html>
 <head>
     <title>Edit Item</title>
+    <link rel="stylesheet" href="/static/app.css">
+        <link rel="stylesheet" href="/static/components.css">
+        <link rel="stylesheet" href="/static/pages.css">
 </head>
 <body>
     <h1>Edit Item</h1>
