--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
     <head>
         <title>PIMP</title>
-        <link rel="stylesheet" href="/static/style.css">
+        <link rel="stylesheet" href="/static/app.css">
+        <link rel="stylesheet" href="/static/components.css">
+        <link rel="stylesheet" href="/static/pages.css">
     </head>
     <body>
         <h1>Inventory</h1>
