--- a/templates/add.html
+++ b/templates/add.html
@@ -2,6 +2,9 @@
 <html>
 <head>
     <title>Add Item</title>
+    <link rel="stylesheet" href="/static/app.css">
+    <link rel="stylesheet" href="/static/components.css">
+    <link rel="stylesheet" href="/static/pages.css">
 </head>
 <body>
     <h1>Add Item</h1>
