--- a/static/pages.css
+++ b/static/pages.css
@@ -3,7 +3,7 @@ center {
     justify-content: center;
 }
 
-hr {
+tr {
     border-top: 4px solid rgb(48, 48, 48);
     margin-left: 2%;
     margin-right: 2%;
