--- a/templates/add.html
+++ b/templates/add.html
@@ -16,7 +16,7 @@
         <input type="text" id="shortDesc" name="shortDesc" required><br>
 
         <label for="fullDesc">Full Description:</label>
-        <input type="text" id="fullDesc" name="fullDesc"><br>
+        <textarea id="fullDesc" name="fullDesc" rows="5" cols="40"></textarea><br>
 
         <label for="price">Price:</label>
         <input type="number" id="price" step="any" name="price" required><br>
