--- a/static/style.css
+++ b/static/style.css
@@ -1,58 +1,51 @@
-html {
-    background-color: black;
-}
+/* Windows 98 Styles */
 
 body {
-    background-color: #f2f2f2;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 16px;
-    margin: 0 auto;
-    padding: 2em;
-    width: 80%;
-}
-
-h1 {
-    text-align: center;
-}
-
-table {
-    margin: 0 auto;
-    border: 1px solid black;
-    border-radius: 5px;
-}
-
-tr {
-    border: 1px solid black;
-}
-
-td {
-    border: 1px solid black;
+    background-color: #008080;
+    font-family: "Arial", sans-serif;
+  }
+  
+  .container {
+    margin: 20px;
+    padding: 20px;
+    background-color: #ffffff;
+    border: 1px solid #000000;
+    box-shadow: 0px 0px 5px #000000;
+  }
+  
+  h1, h2 {
+    color: #000000;
+  }
+  
+  p {
+    color: #000000;
+  }
+  
+  button {
+    background-color: #ffffff;
+    color: #000000;
+    font-family: "Arial", sans-serif;
+    padding: 5px 10px;
+    border: 1px solid #000000;
+    cursor: pointer;
+  }
+  
+  button:hover {
+    background-color: #dcdcdc;
+  }
+  
+  input[type="text"], textarea {
     padding: 5px;
-}
-
-th {
-    border: 1px solid black;
-    padding: 5px;
-}
-
-a {
+    border: 1px solid #000000;
+  }
+  
+  a {
+    color: #0000ff;
     text-decoration: none;
-    color: black;
-    background-color: lightgrey;
-    border-radius: 10px;
-    padding: 5px;
-    margin-top: 10px;
-}
-
-a:hover {
-    background-color: darkgray;
-}   
-
-.addButton {
-    text-decoration: none;
-    color: black;
-    background-color: red;
-    border-radius: 10px;
-    padding: 5px;
-    margin: 0 auto;
-}
+  }
+  
+  a:hover {
+    text-decoration: underline;
+  }
+  
+  
