--- a/templates/index.html
+++ b/templates/index.html
@@ -2,11 +2,10 @@
 <html lang="en">
     <head>
         <title>PIMP</title>
-        <link rel="stylesheet" href="/static/app.css">
-        <link rel="stylesheet" href="/static/components.css">
-        <link rel="stylesheet" href="/static/pages.css">
+        <link rel="stylesheet" href="/static/style.css">
     </head>
     <body>
+        
         <h1>Inventory</h1>
         <table>
             <tr>
@@ -27,13 +26,14 @@
                 <td>{{ item.stock }}</td>
                 <td>{{ item.reorder }}</td>
                 <td>
-                    <a href="/item/{{ item.id }}">view</a>
-                    <a href="/edit/{{ item.id }}">edit</a>
-                    <a href="/delete/{{ item.id }}">delete</a>
+                    <a class="button" href="/item/{{ item.id }}">view</a>
+                    <a class="button" href="/edit/{{ item.id }}">edit</a>
+                    <a class="button" href="/delete/{{ item.id }}">delete</a>
                 </td>
             </tr>
             {% endfor %}
         </table>
-        <a href="/add">Add new item</a>
+        <a class="button" href="/add">Add new item</a>
+    
     </body>
 </html>
