--- a/static/style.css
+++ b/static/style.css
@@ -1,51 +1,95 @@
-/* Windows 98 Styles */
+html {
+    background-color: black;
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
+    padding: 0;
+}
 
 body {
-    background-color: #008080;
-    font-family: "Arial", sans-serif;
-  }
-  
-  .container {
-    margin: 20px;
-    padding: 20px;
-    background-color: #ffffff;
-    border: 1px solid #000000;
-    box-shadow: 0px 0px 5px #000000;
-  }
-  
-  h1, h2 {
-    color: #000000;
-  }
-  
-  p {
-    color: #000000;
-  }
-  
-  button {
-    background-color: #ffffff;
-    color: #000000;
-    font-family: "Arial", sans-serif;
-    padding: 5px 10px;
-    border: 1px solid #000000;
-    cursor: pointer;
-  }
-  
-  button:hover {
-    background-color: #dcdcdc;
-  }
-  
-  input[type="text"], textarea {
-    padding: 5px;
-    border: 1px solid #000000;
-  }
-  
-  a {
-    color: #0000ff;
+    text-align: center;
+    width: 80%;
+    background-color: whitesmoke;
+    margin: 0 auto;
+    padding: 2em;
+}
+
+table {
+    margin: 0 auto;
+    width: 80%;
+    border-collapse: collapse;
+    border: 1px solid black;
+}
+
+th {
+    border: 1px solid black;
+}
+
+td {
+    border: 1px solid black;
+}
+
+.itemRow {
+    height: 40px;
+}
+
+tr:nth-child(even) {
+    background-color: lightgray;
+}
+
+.linkButton {
+    border: 1px solid black;
+    background-color: lightgray;
+    padding: 0.5em;
+    margin-top: 100px;
+    margin-bottom: 10px;
+    border-radius: 5px;
     text-decoration: none;
-  }
-  
-  a:hover {
-    text-decoration: underline;
-  }
-  
-  
+    color: black;
+}
+
+.linkButton:hover {
+    background-color: darkgray;
+    color: white;
+}
+
+label,
+input,
+textarea,
+select,
+button {
+  font-size: 1.3rem;
+  line-height: 1.2
+}
+
+form {
+  width: 30em;
+  max-width: 90%;
+  margin: 0 auto;
+}
+
+label {
+  margin-bottom: 0.4rem;
+  display: block;
+}
+
+input,
+textarea {
+  padding: 0.4rem;
+  width: 100%;
+  border: 1px solid;
+}
+
+button {
+  margin-top: 2rem;
+  reset: all;
+}
+
+button:hover {
+  background-color: darkgray;
+  color: white;
+}
+
+input[type=submit]:hover {
+  background-color: darkgray;
+  color: white;
+}
