--- a/templates/add.html
+++ b/templates/add.html
@@ -2,9 +2,7 @@
 <html>
 <head>
     <title>Add Item</title>
-    <link rel="stylesheet" href="/static/app.css">
-    <link rel="stylesheet" href="/static/components.css">
-    <link rel="stylesheet" href="/static/pages.css">
+    <link rel="stylesheet" href="/static/style.css">
 </head>
 <body>
     <h1>Add Item</h1>
@@ -30,6 +28,8 @@
         <label for="reorder">Minimum Stock:</label>
         <input type="number" id="reorder" name="reorder" required><br>
 
+
+        <br><br>
         <input type="submit" value="Add">
     </form>
 </body>
