--- a/templates/add.html
+++ b/templates/add.html
@@ -33,4 +33,8 @@
         <input type="submit" value="Add">
     </form>
 </body>
+<footer>
+    <p>Created by: Z. Hogarth, 2023</p>
+    <p>Version 0.0.1 Alpha</p>
+</footer>
 </html>
