--- a/templates/edit.html
+++ b/templates/edit.html
@@ -32,4 +32,8 @@
         <input type="submit" value="Update">
     </form>
 </body>
+<footer>
+    <p>Created by: Z. Hogarth, 2023</p>
+    <p>Version 0.0.1 Alpha</p>
+</footer>
 </html>
