--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
                 <td>{{ item.stock }}</td>
                 <td>{{ item.reorder }}</td>
                 <td>
-                    <a class="linkButton" href="/item/{{ item.id }}">view</a>
+                    <!-- <a class="linkButton" href="/item/{{ item.id }}">view</a> -->
                     <a class="linkButton" href="/edit/{{ item.id }}">edit</a>
                     <a class="linkButton" href="/delete/{{ item.id }}">delete</a>
                 </td>
@@ -37,4 +37,9 @@
         <a class="linkButton" href="/add">Add new item</a>
     
     </body>
+
+    <footer>
+        <p>Created by: Z. Hogarth, 2023</p>
+        <p>Version 0.0.1 Alpha</p>
+    </footer>
 </html>
