Added report generation

--- a/templates/add.html
+++ b/templates/add.html
@@ -32,6 +32,8 @@
         <br><br>
         <input type="submit" value="Add">
     </form>
+    <br><br>
+    <a class="linkButton" href="/">Return Home</a>
 </body>
 <footer>
     <p>Created by: Z. Hogarth, 2023</p>
