--- a/templates/edit.html
+++ b/templates/edit.html
@@ -31,6 +31,8 @@
         <br>
         <input type="submit" value="Update">
     </form>
+    <br><br>
+    <a class="linkButton" href="/">Return Home</a>
 </body>
 <footer>
     <p>Created by: Z. Hogarth, 2023</p>
