Added auto grouping by category

--- a/static/style.css
+++ b/static/style.css
@@ -93,3 +93,10 @@ input[type=submit]:hover {
   background-color: darkgray;
   color: white;
 }
+
+@media print {
+    .noPrint {
+        visibility: hidden;
+        display: none;
+    }
+}
