--- a/templates/add.html
+++ b/templates/add.html
@@ -10,6 +10,9 @@
         <label for="name">Name:</label>
         <input type="text" id="name" name="name" required><br>
 
+        <label for="category">Category:</label>
+        <input type="text" id="category" name="category" required><br>
+
         <label for="shortDesc">Short Description:</label>
         <input type="text" id="shortDesc" name="shortDesc" required><br>
 
@@ -33,9 +36,9 @@
         <input type="submit" value="Add">
     </form>
     <br><br>
-    <a class="linkButton" href="/">Return Home</a>
 </body>
-<footer>
+<footer class="noPrint">
+    <a class="linkButton" href="/">Return Home</a>
     <p>Created by: Z. Hogarth, 2023</p>
     <p>Version 0.0.1 Alpha</p>
 </footer>
