--- a/templates/edit.html
+++ b/templates/edit.html
@@ -10,6 +10,9 @@
         <label for="name">Name:</label>
         <input type="text" class="textbox" id="name" name="name" value="{{ item.name }}" required><br>
 
+        <label for="category">Category:</label>
+        <input type="text" id="category" name="category" required><br>
+
         <label for="shortDesc">Short Description:</label>
         <input type="text" class="textbox" id="shortDesc" name="shortDesc" value="{{ item.shortDesc }}" required><br>
 
@@ -32,9 +35,10 @@
         <input type="submit" value="Update">
     </form>
     <br><br>
-    <a class="linkButton" href="/">Return Home</a>
+    
 </body>
-<footer>
+<footer class="noPrint">
+    <a class="linkButton" href="/">Return Home</a>
     <p>Created by: Z. Hogarth, 2023</p>
     <p>Version 0.0.1 Alpha</p>
 </footer>
