--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>PIMP</title>
+        <title>Python Inventory Management Project</title>
         <link rel="stylesheet" href="/static/style.css">
     </head>
     <body>
