--- a/static/style.css
+++ b/static/style.css
@@ -62,7 +62,7 @@ tr:nth-child(odd) {
     margin-bottom: 10px;
     border-radius: 5px;
     text-decoration: none;
-    color: black;
+    color: yellow;
 }
 
 .delLinkButton:hover {
