Button spacing fix

--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,7 @@
         </table>
         <br><br>
         <a class="linkButton" href="/add">Add new item</a>
-        <br><br>
+        <br><span><br></span><br>
         <a class="linkButton" href="/report">Generate Order Sheet</a>
     
     </body>
